--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,27 @@
 <IfModule mod_rewrite.c>
+    # Enable compression
+    # <IfModule mod_deflate.c>
+    # AddOutputFilterByType DEFLATE text/plain
+    # AddOutputFilterByType DEFLATE text/html
+    # AddOutputFilterByType DEFLATE text/xml
+    # AddOutputFilterByType DEFLATE text/css
+    # AddOutputFilterByType DEFLATE text/javascript
+    # AddOutputFilterByType DEFLATE application/x-javascript
+    # AddOutputFilterByType DEFLATE application/javascript
+    # AddOutputFilterByType DEFLATE application/xml
+    # AddOutputFilterByType DEFLATE application/xhtml+xml
+    # AddOutputFilterByType DEFLATE application/rss+xml
+    # AddOutputFilterByType DEFLATE application/atom+xml
+    # AddOutputFilterByType DEFLATE application/x-font-ttf
+    # AddOutputFilterByType DEFLATE application/x-font-opentype
+    # AddOutputFilterByType DEFLATE application/x-font-woff
+    # AddOutputFilterByType DEFLATE image/svg+xml
+    # # Remove browser bugs
+    # BrowserMatch ^Mozilla/4 gzip-only-text/html
+    # BrowserMatch ^Mozilla/4\.0[678] gzip-only-text/html
+    # Header append Vary User-Agent
+    # </IfModule>
+
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
@@ -22,4 +45,6 @@
     # AllowOverride All
     # Allow from all
     # </Directory>
+
+
 </IfModule>
